Suggested fix to jumping filter expansion

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -294,6 +294,11 @@ table{
 }
 
 main{
+
+    &.front{
+        min-height: 860px;
+    }
+
     @include media-breakpoint-between(xs, md) {
         padding-right: .25rem!important;
         padding-left: .25rem!important;
